--- a/style.css
+++ b/style.css
@@ -7,6 +7,24 @@
     --textarea-color:#71717A;
 
 }
+h1::before
+{
+    background: url("./img/minion.jpg") no-repeat center center/cover;
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    opacity: 0.4;
+
+
+}
+*{
+    margin: 0;
+    padding: 0;
+}
 
 body{
     font-family: 'Baloo 2', cursive;
@@ -20,13 +38,26 @@ textarea
     height: 20vh;
     border: 4px solid var(--textarea-color);
     display: block;
+    background-color: rgba(231, 231, 12, 0.315);
+    border-radius: 2rem;
+    padding: 2rem;
 }
-#txt-output
+#output
 {
     width: 90%;
     height: 20vh;
     border: 4px solid var(--textarea-color);
-    color: var(--heading-color);
-  
-
+    color: black;
+    background-color: rgba(231, 231, 12, 0.315);
+    border-radius: 2rem;
+    padding: 2rem;
+}
+#btn-translate
+{
+    height: 2rem;
+    background-color: rgba(248, 248, 12, 0.795);
+    color: black;
+    border-radius: 0.5rem;
+    font-weight: bold;
+    width: 20%;
 }
